--- a/期中/new 10.html
+++ b/期中/new 10.html
@@ -102,7 +102,7 @@ document.write("<p>" + Date() + "</p>");
 
 <body>
 
-<div id="Date" data-date="2016-12-25 00:00:00" style="width: 100%;"></div>
+<div id="Date" data-date="2016-1-10 00:00:00" ></div>
 
 <script>
 
