--- a/期中/new 10.html
+++ b/期中/new 10.html
@@ -4,7 +4,7 @@
 
 <html>
 <body>
-<div style="height:150px;background-color:lightgray">
+<div style="height:150px;>
 <h1 style="color:blue">2017跨年晚會</h1>
 <html>
 <body>
