--- a/期中/new101.html
+++ b/期中/new101.html
@@ -1,20 +1,13 @@
+<!DOCTYPE html>
+<html>
 <head>
 <meta charset="UTF-8">
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="inc/TimeCircles.js"></script>
+<link href="inc/TimeCircles.css" rel="stylesheet">
 </head>
-
-<html>
 <body>
-<div style="height:150px;background-color:lightgray">
-<h1 style="color:blue">2017跨年晚會</h1>
-<html>
-<body>
-<p id="content"><mark>卡司陣容</mark></p>
-<button type="button" onclick="台北()">台北</button>
-<button type="button" onclick="台中()">台中</button>
-<button type="button" onclick="台南()">台南</button>
-<button type="button" onclick="嘉義()">嘉義</button>
-<button type="button" onclick="高雄()">高雄</button>
-<button type="button" onclick="花蓮()">花蓮</button>
 <script>
 function 台北(){
 document.getElementById("content").innerHTML="A-Lin/Boxing/Gentleman/SpeXial/八三夭/安心亞/李佳薇/愷樂/周湯豪/玖壹壹/伍佰/吳思賢";
@@ -35,87 +28,52 @@ function 花蓮(){
 document.getElementById("content").innerHTML="GTM/TOP1 男子漢/袁詠琳/陳零九/羅美玲/陶嫚曼/蔣卓嘉/Erika/FS/楊程鈞/何維健";
 }
 </script>
-</body>
-</html>
+
+<div style="height:150px;width:1296px;background-color:lightgray">
+  <h1 style="color:blue">2017跨年晚會</h1>
+  <p id="content"><mark>卡司陣容</mark></p>
+  <button type="button" onclick="台北()">台北</button>
+  <button type="button" onclick="台中()">台中</button>
+  <button type="button" onclick="台南()">台南</button>
+  <button type="button" onclick="嘉義()">嘉義</button>
+  <button type="button" onclick="高雄()">高雄</button>
+  <button type="button" onclick="花蓮()">花蓮</button>
 </div>
 
 <div style="float:left;width:300px;height:1100px;background-color:lightgreen">
-<h1 style="margin:0px"> </h1>
-<p><mark>連結</mark></p>
-<img src= "google16.jpg" width= "150" height="150" />
- <dd>- <a href="http://year.bluezz.tw/c.php?id=11873" target="_blank">2017臺北最HIGH新年城跨年晚會</a></dd>  
-<img src= "google15.jpg" width= "150" height="150" /> 
-<dd>- <a href="http://year.bluezz.tw/c.php?id=12048" target="_blank">2017花Young台中</a></dd> 
-<img src= "google17.jpg" width= "150" height="150" /> 
-<dd>- <a href="http://year.bluezz.tw/c.php?id=12050" target="_blank">2017台南心時代跨年晚會</a></dd> 
-<img src= "google18.jpg" width= "150" height="150" /> 
-<dd>- <a href="http://year.bluezz.tw/c.php?id=12056" target="_blank">2017全嘉藝起來跨年晚會</a></dd>  
-<img src= "google14.jpg" width= "150" height="150" /> 
-<dd>- <a href="http://year.bluezz.tw/c.php?id=11965" target="_blank">2017高雄夢時代跨年派對</a></dd>  
-<img src= "google19.jpg" width= "150" height="150" /> 
-<dd>- <a href="http://year.bluezz.tw/c.php?id=12100" target="_blank">2017花蓮跨年</a></dd>  
+  <h1 style="margin:0px"> </h1>
+  <p><mark>連結</mark></p>
+  <img src= "google16.jpg" width= "150" height="150" />
+  <dd>- <a href="http://year.bluezz.tw/c.php?id=11873" target="_blank">2017臺北最HIGH新年城跨年晚會</a></dd>  
+  <img src= "google15.jpg" width= "150" height="150" /> 
+  <dd>- <a href="http://year.bluezz.tw/c.php?id=12048" target="_blank">2017花Young台中</a></dd> 
+  <img src= "google17.jpg" width= "150" height="150" /> 
+  <dd>- <a href="http://year.bluezz.tw/c.php?id=12050" target="_blank">2017台南心時代跨年晚會</a></dd> 
+  <img src= "google18.jpg" width= "150" height="150" /> 
+  <dd>- <a href="http://year.bluezz.tw/c.php?id=12056" target="_blank">2017全嘉藝起來跨年晚會</a></dd>  
+  <img src= "google14.jpg" width= "150" height="150" /> 
+  <dd>- <a href="http://year.bluezz.tw/c.php?id=11965" target="_blank">2017高雄夢時代跨年派對</a></dd>  
+  <img src= "google19.jpg" width= "150" height="150" /> 
+  <dd>- <a href="http://year.bluezz.tw/c.php?id=12100" target="_blank">2017花蓮跨年</a></dd>  
 </div>
 
-<div style="height:1100px;width:1267px;background-color:lightblue;float:right">
-<h1 style="margin:0px">Content</h1>
-<img src= "google20.jpg" width= "300" height="500" /> 
-<img src= "google21.jpg" width= "300" height="500" /> 
-<h3 style="color:Aquamarine">放寒假倒數</h3>
+<div style="height:1100px;width:799px;background-color:lightblue;float:right">
+  <h1 style="margin:0px">Content</h1>
+  <img src= "google20.jpg" width= "300" height="500" /> 
+  <img src= "google21.jpg" width= "300" height="500" /> 
+  <h3 style="color:Aquamarine">放寒假倒數</h3>
 <div id="Date" data-date="2017-1-10 00:00:00" >
-
 <script>
-$(document).ready(function() {
-$("#Date").TimeCircles();
-});
-</script></div>
+$(document).ready(function(){$("#Date").TimeCircles();});
+</script>
+  </div>
 </div>
 <div style="height:1200px;background-color:lightgray">
 <h1 style="margin:0px">資訊</h1>
-<html>
-<body>
 <button onclick=alert("期末作業100分")>Important!</button>
-<html>
-<head>
-</head>
-<body>
-<script>
-document.write("<p>" + Date() + "</p>");
-</script>
-</body>
-</html>
-</body>
-</html>
+  <script> 
+       document.write("<p>" + Date() + "</p>");
+  </script>
 </div>
-<!DOCTYPE html>
-
-<html>
-
-<head>
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-<script src="inc/TimeCircles.js"></script>
-
-<link href="inc/TimeCircles.css" rel="stylesheet">
-
-</head>
-
-<body>
-
-<div id="Date" data-date="2016-12-25 00:00:00" style="width: 100%;"></div>
-
-<script>
-
-$(document).ready(function() {
-
-$("#Date").TimeCircles();
-
-});
-
-</script>
-
-</body>
-
-</html>
 </body>
 </html>
